@@ -40,7 +40,7 @@ plugin.tx_egovapi_pi1 {
 	displayBlocks {
 		domain  = LEVEL_INFORMATION,GENERAL_INFORMATION,NEWS,SUBDOMAINS,DESCRIPTOR,SYNONYM
 		topic   = LEVEL_INFORMATION,GENERAL_INFORMATION,NEWS,SUBTOPICS,DESCRIPTOR,SYNONYM
-		service = LEVEL_INFORMATION,GENERAL_INFORMATION,PREREQUISITES,PROCEDURE,FORMS,DOCUMENTS_REQUIRED,SERVICE_PROVIDED,FEE,LEGAL_REGULATION,DOCUMENTS_OTHER,REMARKS,APPROVAL,CONTACT
+		service = LEVEL_INFORMATION,GENERAL_INFORMATION,PREREQUISITES,PROCEDURE,FORMS,DOCUMENTS_REQUIRED,SERVICE_PROVIDED,FEE,LEGAL_REGULATION,DOCUMENTS_OTHER,REMARKS,APPROVAL,CONTACT,BACK_TO_LIST
 	}
 
 	# ------------------------------------------------------------------------------------------
