@@ -43,7 +43,7 @@
 <!-- ###SERVICE_SINGLE### [begin] -->
 
 <!-- ###SHOW_LEVEL_INFORMATION### [begin] -->
-<h1 class="tx_egovapi_service">1. ###SERVICE_NAME###</h1>
+<h1 class="tx_egovapi_service"><span class="block_number">1.</span> ###SERVICE_NAME###</h1>
 
 <table class="tx_egovapi_block_header">
 	<tr>
@@ -74,62 +74,62 @@
 <!-- ###SHOW_LEVEL_INFORMATION### [end] -->
 
 <!-- ###SHOW_GENERAL_INFORMATION### [begin] -->
-<h2 class="tx_egovapi_block_generalInformation">2. ###BLOCK_GENERAL_INFORMATION###</h2>
+<h2 class="tx_egovapi_block_generalInformation"><span class="block_number">2.</span> ###BLOCK_GENERAL_INFORMATION###</h2>
 ###SERVICE_GENERAL_INFORMATION###
 <!-- ###SHOW_GENERAL_INFORMATION### [end] -->
 
 <!-- ###SHOW_PREREQUISITES### [begin] -->
-<h2 class="tx_egovapi_block_prerequisites">3. ###BLOCK_PREREQUISITES###</h2>
+<h2 class="tx_egovapi_block_prerequisites"><span class="block_number">3.</span> ###BLOCK_PREREQUISITES###</h2>
 ###SERVICE_PREREQUISITES###
 <!-- ###SHOW_PREREQUISITES### [end] -->
 
 <!-- ###SHOW_PROCEDURE### [begin] -->
-<h2 class="tx_egovapi_block_procedure">4. ###BLOCK_PROCEDURE###</h2>
+<h2 class="tx_egovapi_block_procedure"><span class="block_number">4.</span> ###BLOCK_PROCEDURE###</h2>
 ###SERVICE_PROCEDURE###
 <!-- ###SHOW_PROCEDURE### [end] -->
 
 <!-- ###SHOW_FORMS### [begin] -->
-<h2 class="tx_egovapi_block_forms">5. ###BLOCK_FORMS###</h2>
+<h2 class="tx_egovapi_block_forms"><span class="block_number">5.</span> ###BLOCK_FORMS###</h2>
 ###SERVICE_FORMS###
 <!-- ###SHOW_FORMS### [end] -->
 
 <!-- ###SHOW_DOCUMENTS_REQUIRED### [begin] -->
-<h2 class="tx_egovapi_block_documentsRequired">6. ###BLOCK_DOCUMENTS_REQUIRED###</h2>
+<h2 class="tx_egovapi_block_documentsRequired"><span class="block_number">6.</span> ###BLOCK_DOCUMENTS_REQUIRED###</h2>
 ###SERVICE_DOCUMENTS_REQUIRED###
 <!-- ###SHOW_DOCUMENTS_REQUIRED### [end] -->
 
 <!-- ###SHOW_SERVICE_PROVIDED### [begin] -->
-<h2 class="tx_egovapi_block_serviceProvided">7. ###BLOCK_SERVICE_PROVIDED###</h2>
+<h2 class="tx_egovapi_block_serviceProvided"><span class="block_number">7.</span> ###BLOCK_SERVICE_PROVIDED###</h2>
 ###SERVICE_SERVICE_PROVIDED###
 <!-- ###SHOW_SERVICE_PROVIDED### [end] -->
 
 <!-- ###SHOW_FEE### [begin] -->
-<h2 class="tx_egovapi_block_fee">8. ###BLOCK_FEE###</h2>
+<h2 class="tx_egovapi_block_fee"><span class="block_number">8.</span> ###BLOCK_FEE###</h2>
 ###SERVICE_FEE###
 <!-- ###SHOW_FEE### [end] -->
 
 <!-- ###SHOW_LEGAL_REGULATION### [begin] -->
-<h2 class="tx_egovapi_block_legalRegulation">9. ###BLOCK_LEGAL_REGULATION###</h2>
+<h2 class="tx_egovapi_block_legalRegulation"><span class="block_number">9.</span> ###BLOCK_LEGAL_REGULATION###</h2>
 ###SERVICE_LEGAL_REGULATION###
 <!-- ###SHOW_LEGAL_REGULATION### [end] -->
 
 <!-- ###SHOW_DOCUMENTS_OTHER### [begin] -->
-<h2 class="tx_egovapi_block_documentsOther">10. ###BLOCK_DOCUMENTS_OTHER###</h2>
+<h2 class="tx_egovapi_block_documentsOther"><span class="block_number">10.</span> ###BLOCK_DOCUMENTS_OTHER###</h2>
 ###SERVICE_DOCUMENTS_OTHER###
 <!-- ###SHOW_DOCUMENTS_OTHER### [end] -->
 
 <!-- ###SHOW_REMARKS### [begin] -->
-<h2 class="tx_egovapi_block_remarks">11. ###BLOCK_REMARKS###</h2>
+<h2 class="tx_egovapi_block_remarks"><span class="block_number">11.</span> ###BLOCK_REMARKS###</h2>
 ###SERVICE_REMARKS###
 <!-- ###SHOW_REMARKS### [end] -->
 
 <!-- ###SHOW_APPROVAL### [begin] -->
-<h2 class="tx_egovapi_block_approval">12. ###BLOCK_APPROVAL###</h2>
+<h2 class="tx_egovapi_block_approval"><span class="block_number">12.</span> ###BLOCK_APPROVAL###</h2>
 ###SERVICE_APPROVAL###
 <!-- ###SHOW_APPROVAL### [end] -->
 
 <!-- ###SHOW_CONTACT### [begin] -->
-<h2 class="tx_egovapi_block_contact">13. ###BLOCK_CONTACT###</h2>
+<h2 class="tx_egovapi_block_contact"><span class="block_number">13.</span> ###BLOCK_CONTACT###</h2>
 <div class="tx_egovapi_block_contact">
 	<div class="half left">
 		<img src="###SERVICE_CONTACT_LOGO###" alt="###SERVICE_CONTACT_OFFICE###" /><br />
@@ -150,6 +150,12 @@
 	<div class="clear"></div>
 </div>
 <!-- ###SHOW_CONTACT### [end] -->
+
+<!-- ###SHOW_BACK_TO_LIST### [begin] -->
+<p>
+	<!-- ###SERVICE_LINK_SERVICES### -->###ACTION_BACK_TO_LIST###<!-- ###SERVICE_LINK_SERVICES### -->
+</p>
+<!-- ###SHOW_BACK_TO_LIST### [end] -->
 
 <!-- ###SERVICE_SINGLE### [end] -->
 
