@@ -1,5 +1,7 @@
 2011-02-18  Xavier Perseguers  <xavier@causal.ch>
 
+	* Added back to list block for services in SINGLE mode
+	* Added css span around service block number
 	* Included confederation-level services
 
 2011-02-15  Xavier Perseguers  <xavier@causal.ch>
